--- a/public/css/LiveGO.css
+++ b/public/css/LiveGO.css
@@ -4,6 +4,12 @@
     align-items: stretch;
 }
 
+.wrapper_content{
+    width: 100%;
+    height: 100vh;
+    display: flex;
+}
+
 @media (max-width: 1600px) {
 
 
@@ -78,7 +84,15 @@ body{
     width: 10rem;
 }
 
-
+.chartheight{
+height: 60vh;
+}
+.charttable{
+    height: 30vh;
+    max-height: 30vh;
+    min-height: 30vh;
+    overflow-y: auto;
+}
 /* 字體 */
 @font-face {
     font-family: NotoSansCJKtc;
@@ -178,6 +192,23 @@ body{
     border-radius: 0 30px 30px 0;
 }
 
+#video_bid .onoffswitch1-inner:before {
+    content: "";
+    padding-left: 10px;
+    background-color: rgb(102, 104, 105); 
+    color: #FFFFFF;
+    border-radius: 30px 0 0 30px;
+}
+
+#video_bid .onoffswitch1-inner:after {
+    content: "";
+    padding-right: 10px;
+    background-color: #EEEEEE; 
+    color: #999999;
+    text-align: right;
+    border-radius: 0 30px 30px 0;
+}
+
 .onoffswitch1-switch {
     display: block; 
     width: 30px; 
@@ -189,7 +220,7 @@ body{
     position: absolute; 
     top: 0; 
     bottom: 0; 
-    right: 60%;
+    right: 62%;
     -moz-transition: all 0.3s ease-in 0s; 
     -webkit-transition: all 0.3s ease-in 0s;
     -o-transition: all 0.3s ease-in 0s; 
