--- a/public/css/sidebar_shop.css
+++ b/public/css/sidebar_shop.css
@@ -3,42 +3,46 @@
     box-shadow: 0 0.0rem 1rem rgba(0, 0, 0, 0.9) !important;
 }
 
-#sidebar {
+#sidebar_shop {
     min-width: 250px;
     max-width: 250px;
     width: 250px;
-    background: rgba(115,134,213); /* 調整左邊列表色系 */
-    background: #272727;
+    background: #fff;
     color: #fff;
     transition: all 0.3s; 
-    position: relative;
+    position: fixed;
+    top: 0;
+    left: 0;
     min-height: 100vh;
     height: 100%;
 }
 
-#sidebar:after {
-    background-image: url(../img/bg.jpg) ; /* 導覽列背景圖片 */
+#sidebar_shop:after {
+    background-image: url(../img/圖片1.png) ; /* 導覽列背景圖片 */
+    -webkit-filter:brightness(1.2);
     background-size: cover;
     top: 0px;
     left: 0px; 
     position: absolute;
-    opacity: 0.5;
+    opacity: 0.4;
     width: 100%;
     height: 100%;
     content: "";
 }
 
-    #sidebar .sidebar-header {
-        padding: 20px;
-        background: #6d7fcc;
-        background: #000000;
-    }
-
-#sidebar .sidebar-header img {
-   width: 50px;
+#sidebar_shop .sidebar-header {
+    padding: 20px;
+    background: #fff;
+    color: #000;
 }
 
-#sidebar ul.components {
+#sidebar_shop .sidebar-header img {
+   width: 50px;
+   z-index: 20  ;
+   position: relative;
+}
+
+#sidebar_shop ul.components {
     padding:  10px 0px;
     border-bottom: 1px solid #47748b;
     border-bottom: 1px solid #3c3c3c;
@@ -47,29 +51,29 @@
 }
 
 
-#sidebar ul.components p {
+#sidebar_shop ul.components p {
     font-family: "NotoSansCJKtc";
 }
 
-#sidebar ul p {
-    color: #fff;
+#sidebar_shop ul p {
+    color: #000;
     padding: 10px;
 }
 
-#sidebar ul li a {
+#sidebar_shop ul li a {
     padding: 10px;
     font-size: 1.1em;
     display: block;
-    color:white;
+    color:#000;
     font-family: "NotoSansCJKtc";
 }
 
-#sidebar ul li a:hover {
+#sidebar_shop ul li a:hover {
     color: #7386D5;
     background: #fff;
 }
 
-#sidebar i {
+#sidebar_shop i {
     padding-right: 10px;
 }
 
@@ -91,11 +95,11 @@ a[data-toggle="collapse"] {
     color:white;
 }
 
-#sidebar.active {
+#sidebar_shop.active {
     margin-left: -250px;
 }
 
-#sidebar ul li.active>a,
+#sidebar_shop ul li.active>a,
 a[aria-expanded="true"] {
     color: #fff;
     background: #6d7fcc;
