--- a/public/css/sidebar.css
+++ b/public/css/sidebar.css
@@ -33,6 +33,7 @@
 }
 
     #sidebar .sidebar-header {
+        color: #fff;
         padding: 20px;
         background: #6d7fcc;
         background: #000000;
