--- a/public/css/LiveGO.css
+++ b/public/css/LiveGO.css
@@ -32,7 +32,9 @@
 }
 
 @media (max-width: 600px) {
-
+    #sidebar {
+        display: none;
+    }
     #content {
         margin-left: 0;
         
