--- a/public/css/LiveGO.css
+++ b/public/css/LiveGO.css
@@ -23,6 +23,12 @@
     margin-left: 25%;
 }
 
+.fb_pic
+{
+    width:80px;
+    height:80px;
+}
+
 .show_msg_center {
     position: fixed;
     top: 50%;
