--- a/public/css/sidebar.css
+++ b/public/css/sidebar.css
@@ -107,5 +107,5 @@ a[data-toggle="collapse"] {
 #sidebar ul li.active>a,
 a[aria-expanded="true"] {
     color: #fff;
-    background: #6d7fcc;
+    background: #000;
 }
